Fixes title font-size being too large on mobile

--- a/src/css/page.less
+++ b/src/css/page.less
@@ -41,6 +41,10 @@ header {
       line-height: 1em;
       display: block;
       color: @red;
+
+      @media @mobile {
+        font-size: 1.2em;
+      }
     }
   }
 
